[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/level1_background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/LevelUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/scenes/levels/Level1.gd" type="Script" id=4]
[ext_resource path="res://scenes/pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/barrier.tscn" type="PackedScene" id=8]

[node name="Level1" type="Node2D" groups=[
"level",
]]
script = ExtResource( 4 )

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="bg" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 258.251, 372.201 )
scale = Vector2( 1.3, 1.3 )

[node name="barrier" parent="." instance=ExtResource( 8 )]

[node name="virusSpawningTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="virusSpawningTimer2" type="Timer" parent="."]
wait_time = 7.0

[node name="virusSpawningTimer3" type="Timer" parent="."]
wait_time = 20.0

[node name="virusSpawningTimer4" type="Timer" parent="."]
wait_time = 10.0

[node name="pause" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="virusSpawningTimer" to="." method="_on_virusSpawningTimer_timeout"]
[connection signal="timeout" from="virusSpawningTimer2" to="." method="_on_virusSpawningTimer2_timeout"]
[connection signal="timeout" from="virusSpawningTimer3" to="." method="_on_virusSpawningTimer3_timeout"]
[connection signal="timeout" from="virusSpawningTimer4" to="." method="_on_virusSpawningTimer4_timeout"]
